# Vienna-Game-Geometry-Library

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: demo.cpp
tests/: AaBoxTest.cpp  CMakeLists.txt  CapsuleTest.cpp  ConvexHullTest.cpp  SphereTest.cpp  vulkanTest.cpp
vgeo/: CollisionResults.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Handle.hpp  Point3D.hpp  RayResult.hpp  ShapeType.hpp  UserPolicy.hpp  Vector3D.hpp
vgeo/descriptors/: AaBoxDesc.hpp  CapsuleDesc.hpp  ConvexHullDesc.hpp  SphereDesc.hpp
vgeo/internal/: CollisionBackend.hpp  ConvexHullBuilder.cpp  ConvexHullBuilder.hpp  ConvexHullData.hpp  HandleRegistry.hpp
vgeo/internal/cpu/: .gitkeep  Aabb.hpp  Backend.hpp  BoundingVolume.hpp  CollisionShape.hpp  ConvexHull.cpp  ConvexHull.hpp  CpuBackend.hpp
vgeo/internal/cpu/shapes/: AaBox.hpp  Capsule.hpp  CollisionShape.hpp  ConvexHull.hpp  Sphere.hpp
vgeo/internal/gpu/: .gitkeep  GpuBackend.cpp  GpuBackend.hpp  VulkanHandler.cpp  VulkanHandler.hpp  comp.comp  comp.spv
vgeo/internal/gpu/shaders/: CMakeLists.txt  comp.comp  comp.spv  test.comp
